api application deployed

--- a/dtModelClean.ipynb
+++ b/dtModelClean.ipynb
@@ -780,11 +780,11 @@
       "The validation r_sq is: 0.51\n",
       "VALIDATION DATA PREDICTIONS \n",
       "*********************************\n",
-      "The r2_sq is:  0.5064342462830604\n",
-      "The MAE is:  283321.4550833782\n",
-      "The MSE is:  268884811415.34366\n",
-      "The RMSE is:  518541.0412063289\n",
-      "The EVS is:  0.5068849600544214\n"
+      "The r2_sq is:  0.5091938037438619\n",
+      "The MAE is:  284511.40720817645\n",
+      "The MSE is:  267381459365.79498\n",
+      "The RMSE is:  517089.41138433205\n",
+      "The EVS is:  0.5096942945933907\n"
      ]
     }
    ],
@@ -820,8 +820,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average Price of house is: 1075260.1310740542\n",
-      "Mean Absolute Error:  283321.4550833782\n"
+      "Average Price of house is: 1074417.501165501\n",
+      "Mean Absolute Error:  284511.40720817645\n"
      ]
     }
    ],
@@ -874,7 +874,13 @@
       "Max leaf nodes: 100  \t\t Mean Absolute Error:  269750\n",
       "Max leaf nodes: 250  \t\t Mean Absolute Error:  264515\n",
       "Max leaf nodes: 500  \t\t Mean Absolute Error:  265267\n",
-      "Max leaf nodes: 1000  \t\t Mean Absolute Error:  271311\n",
+      "Max leaf nodes: 1000  \t\t Mean Absolute Error:  271311\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Max leaf nodes: 5000  \t\t Mean Absolute Error:  282250\n"
      ]
     }
