web app is ready

--- a/dtModelClean.ipynb
+++ b/dtModelClean.ipynb
@@ -36,11 +36,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import sklearn\n",
     "\n",
     "# Path of the file to read\n",
     "file_path = 'melb_data.csv'\n",
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +128,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +449,7 @@
        "Price         -0.304633 -0.148867  0.125539  -0.213574    0.211760  1.000000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +597,7 @@
        "7      2       1.0     256.0   -37.8060    144.9954"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -770,21 +771,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The validation r_sq is: 0.51\n",
+      "The validation r_sq is: 0.50\n",
       "VALIDATION DATA PREDICTIONS \n",
       "*********************************\n",
-      "The r2_sq is:  0.5091938037438619\n",
-      "The MAE is:  284511.40720817645\n",
-      "The MSE is:  267381459365.79498\n",
-      "The RMSE is:  517089.41138433205\n",
-      "The EVS is:  0.5096942945933907\n"
+      "The r2_sq is:  0.5007035360461798\n",
+      "The MAE is:  284838.5510130895\n",
+      "The MSE is:  272006788436.0657\n",
+      "The RMSE is:  521542.70049159514\n",
+      "The EVS is:  0.5010535118822612\n"
      ]
     }
    ],
@@ -813,15 +814,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average Price of house is: 1074417.501165501\n",
-      "Mean Absolute Error:  284511.40720817645\n"
+      "Average Price of house is: 1077121.8796844182\n",
+      "Mean Absolute Error:  284838.5510130895\n"
      ]
     }
    ],
@@ -844,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -874,13 +875,7 @@
       "Max leaf nodes: 100  \t\t Mean Absolute Error:  269750\n",
       "Max leaf nodes: 250  \t\t Mean Absolute Error:  264515\n",
       "Max leaf nodes: 500  \t\t Mean Absolute Error:  265267\n",
-      "Max leaf nodes: 1000  \t\t Mean Absolute Error:  271311\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Max leaf nodes: 1000  \t\t Mean Absolute Error:  271311\n",
       "Max leaf nodes: 5000  \t\t Mean Absolute Error:  282250\n"
      ]
     }
@@ -901,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +950,7 @@
        "(5,)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -966,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +970,7 @@
        "array([[  3.    ,   2.    , 134.    , -37.8093, 144.9944]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -987,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +999,7 @@
        "array([1246050.])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1023,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1032,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1041,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +1062,7 @@
        "array([1246050.])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
