members description added

--- a/ML_Classification_Comparison/model_comp_demo.ipynb
+++ b/ML_Classification_Comparison/model_comp_demo.ipynb
@@ -5,7 +5,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ML Model Compaarison\n"
+    "<h3>Assignment</h3>\n",
+    "<h5>ML Model Compaarison</h5>\n",
+    "\n",
+    "<h4>Group_VRS</h4>\n",
+    "<h4>Members:</h4>\n",
+    "<table style=\"border-collapse: collapse; width: 100%; height: 72px;\" border=\"1\">\n",
+    "<tbody>\n",
+    "<tr style=\"height: 18px; background-color: blue;\">\n",
+    "<td style=\"width: 50%; height: 18px; text-align: left;\"><span style=\"color: #ffffff;\"><strong>Name</strong></span></td>\n",
+    "<td style=\"width: 50%; height: 18px; text-align: left;\"><span style=\"color: #ffffff;\"><strong>BITS ID</strong></span></td>\n",
+    "</tr>\n",
+    "<tr style=\"height: 18px;\">\n",
+    "<td style=\"width: 50%; height: 18px; text-align: left;\">Rahul Khandpur</td>\n",
+    "<td style=\"width: 50%; height: 18px; text-align: left;\">2022OG04037</td>\n",
+    "</tr>\n",
+    "<tr style=\"height: 18px;\">\n",
+    "<td style=\"width: 50%; height: 18px; text-align: left;\">Vaibhav Vig</td>\n",
+    "<td style=\"width: 50%; height: 18px; text-align: left;\">2022OG04038</td>\n",
+    "</tr>\n",
+    "<tr style=\"height: 18px;\">\n",
+    "<td style=\"width: 50%; height: 18px; text-align: left;\">Sumanta Kumar Patel</td>\n",
+    "<td style=\"width: 50%; height: 18px; text-align: left;\">2022OG04032</td>\n",
+    "</tr>\n",
+    "</tbody>\n",
+    "</table>"
    ]
   },
   {
